add styling to main page and alter original next layout

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -5,12 +5,13 @@
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
+  text-align: center;
 }
 
 .description {
-  display: inherit;
+  /* display: inherit;
   justify-content: inherit;
-  align-items: inherit;
+  align-items: inherit; */
   font-size: 0.85rem;
   max-width: var(--max-width);
   width: 100%;
@@ -25,29 +26,59 @@
   gap: 0.5rem;
 }
 
-.description p {
+.globeLogo {
+  height: 220px;
+  width: 220px;
+  cursor: pointer;
+  border-radius: 50%;
+  box-shadow: -8px 0px 3rem 8px rgb(187 148 133);
+}
+
+.heading {
+  color: rgba(230, 236, 240);
+  overflow: visible;
+  position: relative;
+}
+
+.span {
+  text-align: center;
+  font-size: 1.9rem;
+  position: absolute;
+  left: 20%;
+  right: 20%;
+  top: 22%;
+  background: rgb(0, 0, 0);
+}
+
+/* .description p {
   position: relative;
   margin: 0;
   padding: 1rem;
   background-color: rgba(var(--callout-rgb), 0.5);
   border: 1px solid rgba(var(--callout-border-rgb), 0.3);
   border-radius: var(--border-radius);
-}
+} */
 
-.code {
+/* .code {
   font-weight: 700;
   font-family: var(--font-mono);
-}
+} */
 
-.grid {
+/* .grid {
   display: grid;
   grid-template-columns: repeat(4, minmax(25%, auto));
+  max-width: 100%;
+  width: var(--max-width);
+} */
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(25%, auto));
   max-width: 100%;
   width: var(--max-width);
 }
 
 .card {
-  padding: 1rem 1.2rem;
+  padding: 1.2rem 1.6rem;
   border-radius: var(--border-radius);
   background: rgba(var(--card-rgb), 0);
   border: 1px solid rgba(var(--card-border-rgb), 0);
@@ -59,15 +90,9 @@
   transition: transform 200ms;
 }
 
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
 .card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
+  margin: 0 auto;
+  font-size: 1.2rem;
   line-height: 1.5;
   max-width: 30ch;
 }
@@ -210,7 +235,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  .vercelLogo {
+  .globeLogo {
     filter: invert(1);
   }
 
