--- a/app/globals.css
+++ b/app/globals.css
@@ -95,6 +95,11 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+h1 {
+  text-align: center;
+  font-size: 2.5rem;
+}
+
 a {
   color: inherit;
   text-decoration: none;
