--- a/app/page.module.css
+++ b/app/page.module.css
@@ -9,9 +9,6 @@
 }
 
 .description {
-  /* display: inherit;
-  justify-content: inherit;
-  align-items: inherit; */
   font-size: 0.85rem;
   max-width: var(--max-width);
   width: 100%;
@@ -50,26 +47,6 @@
   background: rgb(0, 0, 0);
 }
 
-/* .description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
-} */
-
-/* .code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-} */
-
-/* .grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
-} */
 .grid {
   display: grid;
   grid-template-columns: repeat(2, minmax(25%, auto));
@@ -101,37 +78,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   position: relative;
   padding: 4rem 0;
 }
 
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
+.center h2 {
+  margin-top: 1.2rem;
 }
 
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
-
-.logo {
-  position: relative;
-}
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
@@ -175,11 +130,6 @@
     padding: 8rem 0 6rem;
   }
 
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
   .description {
     font-size: 0.8rem;
   }
@@ -188,42 +138,10 @@
     padding: 1rem;
   }
 
-  .description p,
   .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
     width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
     pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
     height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
   }
 }
 
@@ -237,10 +155,6 @@
 @media (prefers-color-scheme: dark) {
   .globeLogo {
     filter: invert(1);
-  }
-
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
   }
 }
 
