--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,4 +1,9 @@
 .main {
+  /* background-image: linear-gradient(
+      rgba(241, 236, 236, 0.3),
+      rgba(0, 0, 0, 0.7)
+    ),
+    url('../public/pexels-andrew-neel-2859169.jpg'); */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -58,6 +63,14 @@
   padding: 1.2rem 1.6rem;
   border-radius: var(--border-radius);
   background: rgba(var(--card-rgb), 0);
+  border: 1px solid rgba(var(--card-border-rgb), 0);
+  transition: background 200ms, border 200ms;
+}
+
+.card2 {
+  padding: 1.2rem 1.6rem;
+  border-radius: var(--border-radius);
+  background: green;
   border: 1px solid rgba(var(--card-border-rgb), 0);
   transition: background 200ms, border 200ms;
 }
