--- a/app/style.css
+++ b/app/style.css
@@ -9,6 +9,7 @@
   --background-color: black;
   --text-primary-color: white;
   --text-secondary-color: black;
+  --correct-color: rgb(255, 210, 0);
   --font-primary: 'Poppins', sans-serif;
   --font-secondary: 'Abril Fatface', serif;
 }
