--- a/app/page.module.css
+++ b/app/page.module.css
@@ -71,11 +71,20 @@
   border: 1px solid black;
 }
 
-.cardCorrect:active {
+.card:hover,
+.cardCorrect:hover,
+.cardIncorrect:hover {
+  cursor: pointer;
+  box-shadow: 3px 7px 16px 5px rgb(187 148 133 / 60%);
+  transition: transform 150ms;
+  transform: scale(1.03);
+}
+
+.cardCorrect {
   background: rgb(255, 210, 0);
 }
 
-.cardIncorrect:active {
+.cardIncorrect {
   background: red;
 }
 
