--- a/app/page.module.css
+++ b/app/page.module.css
@@ -59,9 +59,7 @@
   width: var(--max-width);
 }
 
-.card,
-.cardCorrect,
-.cardIncorrect {
+.card {
   padding: 1.2rem 1.6rem;
   border-radius: var(--border-radius);
   background: rgba(var(--card-rgb), 0);
@@ -71,14 +69,14 @@
   border: 1px solid black;
 }
 
-.card:hover,
+/* .card:hover,
 .cardCorrect:hover,
 .cardIncorrect:hover {
   cursor: pointer;
   box-shadow: 3px 7px 16px 5px rgb(187 148 133 / 60%);
   transition: transform 150ms;
   transform: scale(1.03);
-}
+} */
 
 .cardCorrect {
   background: rgb(255, 210, 0);
