disabled all answer cards after user selects any answer

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -59,7 +59,8 @@
   width: var(--max-width);
 }
 
-.card {
+.card,
+.disabled {
   padding: 1.2rem 1.6rem;
   border-radius: var(--border-radius);
   background: rgba(var(--card-rgb), 0);
@@ -67,6 +68,11 @@
   transition: background 200ms, border 200ms;
   margin: 0.5rem;
   border: 1px solid black;
+}
+
+.disabled {
+  pointer-events: none;
+  cursor: pointer;
 }
 
 /* .card:hover,
