add Link to scores page

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -108,9 +108,20 @@
   margin-top: 1.2rem;
 }
 
-.btn {
+.btn,
+.btnLink {
   margin: 2rem;
   padding: 1rem 2.3rem;
+}
+
+.btnLink {
+  padding: 1.2rem 1.6rem;
+  border-radius: var(--border-radius);
+  background: rgba(var(--card-rgb), 0);
+  border: 1px solid rgba(var(--card-border-rgb), 0);
+  transition: background 200ms, border 200ms;
+  margin: 0.5rem;
+  border: 1px solid black;
 }
 
 /* Enable hover only on non-touch devices */
