--- a/app/page.module.css
+++ b/app/page.module.css
@@ -9,7 +9,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 6rem;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   text-align: center;
 }
 
@@ -45,6 +45,16 @@
 .menuContainer {
   border: 1px solid black;
   padding: 2rem;
+}
+
+.formContainer {
+  border: 1px solid black;
+  padding: 2rem;
+  margin: 1em;
+}
+
+.formInputs {
+  margin: 1em;
 }
 
 .span {
