--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,73 +1,30 @@
-/* * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  text-decoration: none;
-}
-
-:root {
-  --background-color: black;
-  --text-primary-color: white;
-  --text-secondary-color: black;
-  --correct-color: rgb(255, 210, 0);
-  --font-primary: 'Poppins', sans-serif;
-  --font-secondary: 'Abril Fatface', serif;
-}
-
-html {
-  font-size: 62.5%;
-  font-family: var(--font-primary);
-  color: var(--text-primary-color);
-} */
-
-.main {
-  background-image: linear-gradient(
-      rgba(241, 236, 236, 0.3),
-      rgba(0, 0, 0, 0.7)
-    ),
-    url('../public/pexels-andrew-neel-2859169.jpg');
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
-  text-align: center;
-}
-
-/* .main {
-  background-image: linear-gradient(
-      rgba(241, 236, 236, 0.3),
-      rgba(0, 0, 0, 0.7)
-    ),
-    url('../public/pexels-irina-iriser-1366957.jpg');
-  background: var(--background-color);
-  background-position: 0 0;
-  background-size: cover;
-  height: 100vh;
-  overflow: hidden;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
-} */
-
-.description {
+.logoArea {
   font-size: 0.85rem;
-  max-width: var(--max-width);
+  max-width: 1280px;
   width: 100%;
   z-index: 2;
   font-family: var(--font-mono);
 }
 
-.description a {
+.logoArea a {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
+}
+
+.heading {
+  color: rgba(230, 236, 240);
+  overflow: visible;
+  position: relative;
+}
+
+.globeLogo {
+  height: 220px;
+  width: 220px;
+  cursor: pointer;
+  border-radius: 50%;
+  box-shadow: -8px 0px 3rem 8px rgb(187 148 133);
 }
 
 .gameArea {
@@ -84,27 +41,7 @@ html {
   margin-bottom: 2%;
 }
 
-.gameContainer {
-  width: 85%;
-  margin: auto;
-  position: relative;
-}
-
-.globeLogo {
-  height: 220px;
-  width: 220px;
-  cursor: pointer;
-  border-radius: 50%;
-  box-shadow: -8px 0px 3rem 8px rgb(187 148 133);
-}
-
-.heading {
-  color: rgba(230, 236, 240);
-  overflow: visible;
-  position: relative;
-}
-
-.menuContainer {
+.container {
   border: 1px solid black;
   padding: 2rem;
 }
@@ -118,16 +55,6 @@ html {
   background: rgb(187 148 133 / 60%);
   padding: 0 1rem;
   text-transform: uppercase;
-}
-
-.formContainer {
-  border: 1px solid black;
-  padding: 2rem;
-  margin: 1em;
-}
-
-.formInputs {
-  margin: 1em;
 }
 
 .span {
@@ -200,6 +127,16 @@ html {
 .btnLink {
   margin: 2rem;
   padding: 3.3rem;
+  background: var(--btn-background-color);
+  width: 380px;
+  max-width: 100%;
+  height: 60px;
+  text-transform: uppercase;
+  letter-spacing: 1.2px;
+  margin: 0.8rem 0;
+  text-align: center;
+  border-radius: 6px;
+  border: 1px solid black;
 }
 
 .btnLink {
