--- a/app/styles.css
+++ b/app/styles.css
@@ -29,7 +29,7 @@ body {
   background-position: 0 0;
   background-size: cover;
   height: 100vh;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 main {
