--- a/app/page.module.css
+++ b/app/page.module.css
@@ -81,12 +81,19 @@
 
 .card,
 .disabled {
-  padding: 1.2rem 1.6rem;
+  padding: 2.2rem 2.6rem;
   border-radius: 6px;
   background: rgba(var(--card-rgb), 0);
   transition: background 200ms, border 200ms;
-  margin: 0.5rem;
+  margin: 1rem;
   border: 1px solid black;
+}
+
+.card:hover {
+  cursor: pointer;
+  box-shadow: 3px 7px 16px 5px rgb(187 148 133 / 60%);
+  transition: transform 150ms;
+  transform: scale(1.03);
 }
 
 .disabled {
@@ -109,7 +116,7 @@
 
 .card p {
   margin: 0 auto;
-  font-size: 1.2rem;
+  font-size: 2rem;
   line-height: 1.5;
   max-width: 30ch;
 }
@@ -118,7 +125,7 @@
 .btnLink {
   margin: 2rem;
   padding: 3.3rem;
-  background: var(--btn-background-color);
+  background-color: rgb(239, 239, 239);
   width: 380px;
   max-width: 100%;
   /* height: 60px; */
@@ -131,11 +138,16 @@
   align-items: center;
 }
 
+.btn:hover {
+  cursor: pointer;
+  box-shadow: 3px 7px 16px 5px rgb(187 148 133 / 60%);
+  transition: transform 150ms;
+  transform: scale(1.03);
+}
+
 .btnLink {
   padding: 1.2rem 1.6rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
+  border-radius: 6px;
   transition: background 200ms, border 200ms;
   margin: 0.5rem;
   border: 1px solid black;
@@ -145,7 +157,6 @@
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
     background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
   }
 
   .card:hover span {
