--- a/app/page.module.css
+++ b/app/page.module.css
@@ -31,7 +31,6 @@
 
 /* Container */
 .container {
-  border: 4px solid red;
   padding: 2rem;
   display: flex;
   flex-direction: column;
@@ -45,7 +44,7 @@
   background-color: rgba(230, 236, 240, 0.95);
   border-radius: 6px;
   padding: 1rem;
-  border: 3px solid blue;
+  border: 1px solid black;
   width: 85%;
   max-width: 1280px;
 }
