--- a/app/page.module.css
+++ b/app/page.module.css
@@ -148,8 +148,34 @@
   padding: 1.2rem 1.6rem;
   border-radius: 6px;
   transition: background 200ms, border 200ms;
-  margin: 0.5rem;
+  margin: 2rem;
   border: 1px solid black;
+}
+
+.scoreContainer {
+  height: 40vh;
+}
+
+.scoreCard {
+  width: fit-content;
+
+  padding: 1rem 2rem;
+  /* padding: 3.3rem; */
+
+  margin: 0.7rem 0;
+  /* margin: 2rem; */
+  /* margin: 0.8rem 0; */
+
+  background-color: rgb(239, 239, 239);
+  width: 380px;
+  max-width: 100%;
+  /* height: 60px; */
+  text-transform: uppercase;
+  letter-spacing: 1.2px;
+  text-align: center;
+  border-radius: 6px;
+  border: 1px solid black;
+  align-items: center;
 }
 
 /* Enable hover only on non-touch devices */
