--- a/app/page.module.css
+++ b/app/page.module.css
@@ -123,14 +123,16 @@
 .btn,
 .btnLink {
   margin: 2rem;
-  padding: 3.3rem;
+  /* padding: 3.3rem; */
+  padding: 2rem;
+  margin: 0.7rem 0;
   background-color: rgb(239, 239, 239);
-  width: 380px;
-  max-width: 100%;
+  max-width: 380px;
+  width: 100%;
   /* height: 60px; */
   text-transform: uppercase;
   letter-spacing: 1.2px;
-  margin: 0.8rem 0;
+  /* margin: 0.8rem 0; */
   text-align: center;
   border-radius: 6px;
   border: 1px solid black;
@@ -153,29 +155,31 @@
 }
 
 .scoreContainer {
-  height: 40vh;
+  /* height: 40vh; */
+  display: flex;
+  flex-direction: column;
+  /* gap: 10px; */
+  justify-content: center;
+  align-items: center;
 }
 
 .scoreCard {
-  width: fit-content;
+  font-size: 18px;
+  /* width: fit-content; */
 
   padding: 1rem 2rem;
-  /* padding: 3.3rem; */
-
   margin: 0.7rem 0;
-  /* margin: 2rem; */
-  /* margin: 0.8rem 0; */
 
   background-color: rgb(239, 239, 239);
-  width: 380px;
-  max-width: 100%;
+  max-width: 380px;
+  width: 100%;
   /* height: 60px; */
   text-transform: uppercase;
   letter-spacing: 1.2px;
-  text-align: center;
+  /* text-align: center; */
   border-radius: 6px;
   border: 1px solid black;
-  align-items: center;
+  /* align-items: center; */
 }
 
 /* Enable hover only on non-touch devices */
@@ -210,6 +214,10 @@
 
   .card h2 {
     margin-bottom: 0.5rem;
+  }
+
+  .scoreCard {
+    font-size: 12px;
   }
 }
 
