--- a/app/page.module.css
+++ b/app/page.module.css
@@ -36,6 +36,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  height: 100%;
 }
 
 /* Game area */
@@ -45,11 +46,13 @@
   border-radius: 6px;
   padding: 1rem;
   border: 1px solid black;
+  height: 60vh;
   width: 85%;
   max-width: 1280px;
 }
 
-.scoreTally {
+.scoreTally,
+.goldBackground {
   color: rgb(255, 210, 0);
   text-shadow: -1.5px 1px 1px rgb(0, 0, 0);
   font-weight: bold;
@@ -58,6 +61,14 @@
   background: rgb(187 148 133 / 60%);
   padding: 1rem;
   text-transform: uppercase;
+}
+
+.goldBackground {
+  margin: 3rem 1rem;
+}
+
+.howToText {
+  line-height: 50px;
 }
 
 .span {
@@ -122,17 +133,15 @@
 
 .btn,
 .btnLink {
-  margin: 2rem;
-  /* padding: 3.3rem; */
   padding: 2rem;
   margin: 0.7rem 0;
   background-color: rgb(239, 239, 239);
   max-width: 380px;
   width: 100%;
-  /* height: 60px; */
+
   text-transform: uppercase;
   letter-spacing: 1.2px;
-  /* margin: 0.8rem 0; */
+
   text-align: center;
   border-radius: 6px;
   border: 1px solid black;
@@ -155,31 +164,25 @@
 }
 
 .scoreContainer {
-  /* height: 40vh; */
+  max-width: 380px;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  /* gap: 10px; */
   justify-content: center;
   align-items: center;
 }
 
 .scoreCard {
-  font-size: 18px;
-  /* width: fit-content; */
-
-  padding: 1rem 2rem;
-  margin: 0.7rem 0;
-
-  background-color: rgb(239, 239, 239);
+  font-size: 15px;
   max-width: 380px;
   width: 100%;
-  /* height: 60px; */
+  padding: 0.7rem 2rem;
+  margin: 0.3rem 0;
+  background-color: rgb(239, 239, 239);
   text-transform: uppercase;
   letter-spacing: 1.2px;
-  /* text-align: center; */
   border-radius: 6px;
   border: 1px solid black;
-  /* align-items: center; */
 }
 
 /* Enable hover only on non-touch devices */
