--- a/app/page.module.css
+++ b/app/page.module.css
@@ -204,21 +204,57 @@
 
 /* Mobile */
 @media (max-width: 700px) {
+  .logoGlobe {
+    height: 160px;
+    width: 160px;
+  }
+
+  .span {
+    font-size: 1.9rem;
+    left: 20%;
+    right: 20%;
+    top: 22%;
+  }
+
+  .logoArea {
+    margin-bottom: 3rem;
+  }
+
+  .scoreTally {
+    font-size: 1.5em;
+    margin: 1.5rem 2rem;
+  }
+  .howToText {
+    line-height: 35px;
+  }
+  .container {
+    padding: 1rem;
+    height: 100%;
+  }
+  .gameArea {
+    font-size: 1rem;
+    padding: 1rem;
+    height: 60vh;
+    width: 100%;
+    max-width: 620px;
+  }
   .grid {
     grid-template-columns: 1fr;
     margin-bottom: 120px;
     max-width: 320px;
     text-align: center;
   }
-
   .card {
-    padding: 1rem 2.5rem;
+    padding: 0.5rem 2rem;
+    margin: 0.5rem;
   }
 
+  .card p {
+    font-size: 1rem;
+  }
   .card h2 {
     margin-bottom: 0.5rem;
   }
-
   .scoreCard {
     font-size: 12px;
   }
