--- a/app/styles.css
+++ b/app/styles.css
@@ -46,3 +46,16 @@ h2 {
   font-size: 2.5rem;
   margin: 2rem 0;
 }
+
+@media (max-width: 700px) {
+  h1 {
+    font: 75%;
+  }
+  h2 {
+    font-size: 75%;
+    margin: 1rem 0;
+  }
+  p {
+    font: 75%;
+  }
+}
