--- a/app/page.module.css
+++ b/app/page.module.css
@@ -36,7 +36,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  height: 100%;
+  /* height: 100%; */
 }
 
 /* Game area */
@@ -44,7 +44,7 @@
   font-size: 2rem;
   background-color: rgba(230, 236, 240, 0.95);
   border-radius: 6px;
-  padding: 1rem;
+  padding: 2rem;
   border: 1px solid black;
   height: 60vh;
   width: 85%;
@@ -57,7 +57,7 @@
   text-shadow: -1.5px 1px 1px rgb(0, 0, 0);
   font-weight: bold;
   letter-spacing: 0.3rem;
-  margin: 2rem 3rem;
+  margin: 1rem 1.5rem;
   background: rgb(187 148 133 / 60%);
   padding: 1rem;
   text-transform: uppercase;
@@ -238,13 +238,13 @@
   .gameArea {
     font-size: 1rem;
     padding: 1rem;
-    height: 60vh;
+    height: 70vh;
     width: 100%;
     max-width: 620px;
   }
   .grid {
     grid-template-columns: 1fr;
-    margin-bottom: 120px;
+    /* margin-bottom: 120px; */
     max-width: 320px;
     text-align: center;
   }
