--- a/app/page.module.css
+++ b/app/page.module.css
@@ -46,7 +46,7 @@
   border-radius: 6px;
   padding: 2rem;
   border: 1px solid black;
-  height: 60vh;
+  /* height: 60vh; */
   width: 85%;
   max-width: 1280px;
 }
@@ -238,7 +238,7 @@
   .gameArea {
     font-size: 1rem;
     padding: 1rem;
-    height: 70vh;
+    /* height: 70vh; */
     width: 100%;
     max-width: 620px;
   }
