--- a/app/scores/page.module.css
+++ b/app/scores/page.module.css
@@ -1,9 +1,45 @@
 .formContainer {
-  border: 1px solid black;
-  padding: 2rem;
-  margin: 1em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
-.formInputs {
-  margin: 1em;
+.inputContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 380px;
+  width: 100%;
+}
+
+.input {
+  padding: 1.5rem;
+  margin: 0.5rem;
+  border-radius: 6px;
+  border: 1px solid black;
+  width: 100%;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.btn {
+  padding: 2rem;
+  margin: 0.7rem 0;
+  background-color: rgb(239, 239, 239);
+  max-width: 380px;
+  width: 100%;
+  text-transform: uppercase;
+  letter-spacing: 1.2px;
+  text-align: center;
+  border-radius: 6px;
+  border: 1px solid black;
+  align-items: center;
+}
+
+.btn:hover {
+  cursor: pointer;
+  box-shadow: 3px 7px 16px 5px rgb(187 148 133 / 60%);
+  transition: transform 150ms;
+  transform: scale(1.03);
 }
